k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels: { app: web }
  template:
    metadata:
      labels: { app: web }
    spec:
      containers:
      - name: web
        image: soloud1025/soloud-flask   # 태그는 Kustomize에서 덮어씀
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet: { path: "/", port: 80 }
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet: { path: "/", port: 80 }
          initialDelaySeconds: 15
          periodSeconds: 10
