k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soloud-flask
  labels:
    app: soloud
spec:
  type: LoadBalancer   # 외부에서 접속하려면 LoadBalancer
  selector:
    app: soloud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
