k8s/was-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: was-svc
  namespace: app
spec:
  selector: { app: was }
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
